sticker collapse and accordion collapse fix

--- a/student/assets/css/custom-css.css
+++ b/student/assets/css/custom-css.css
@@ -73,6 +73,20 @@
 	.student-evaluator-details div{
 		text-align: center !important;
 	}
+
+	#mobile-labels {
+		transition: max-height 0.4s ease, opacity 0.3s ease;
+		overflow: hidden;
+		max-height: 500px; /* enough to show full content */
+		opacity: 1;
+		will-change: max-height, opacity;;
+	}
+	
+	#mobile-labels.collapsed {
+		padding-bottom: 0 !important;
+		max-height: 0;
+		opacity: 0;
+	}
 }
 
 
